--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "mocha": "~1.16.2",
-    "should": "~2.1.1"
+    "should": "~2.1.1",
+    "plumber": "~0.1.17"
   }
 }
