--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Filename renaming operation for Plumber pipelines",
   "main": "index",
   "dependencies": {
-    "plumber": "git://github.com/plumberjs/plumber.git#highland"
+    "plumber": "~0.3.0"
   },
   "devDependencies": {
     "plumber-util-test": "~0.3.0",
