--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.3.0",
   "description": "Filename renaming operation for Plumber pipelines",
   "main": "index",
-  "dependencies": {
-    "plumber": "~0.3.0"
+  "peerDependencies": {
+    "plumber": "~0.4.0"
   },
   "devDependencies": {
-    "plumber-util-test": "~0.3.0",
+    "plumber-util-test": "~0.4.0",
     "mocha": "~1.16.2",
     "should": "~2.1.1"
   },
